@@ -14,11 +14,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <fastjson.version>1.2.60</fastjson.version>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
+        <maven.compiler.compilerArgs>--enable-preview</maven.compiler.compilerArgs>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
@@ -28,7 +29,6 @@
         <maven-spring-boot-plugin.version>2.1.7.RELEASE</maven-spring-boot-plugin.version>
         <core.version>1.0.0</core.version>
         <fastjson.version>1.2.60</fastjson.version>
-        <java.version>1.8</java.version>
         <mybatis.version>1.3.2</mybatis.version>
         <druid.version>1.1.10</druid.version>
         <commons-codec.version>1.10</commons-codec.version>
@@ -45,7 +45,9 @@
         <mysql.connector.version>6.0.6</mysql.connector.version>
         <spring-javaformat.version>0.0.7</spring-javaformat.version>
         <hutool.version>4.1.19</hutool.version>
-        <spring-cloud-dependencies.version>Greenwich.SR3</spring-cloud-dependencies.version>
+        <!--<spring-cloud-dependencies.version>Greenwich.SR3</spring-cloud-dependencies.version>-->
+        <!--springboot 2.2.0 -->
+        <spring-cloud-dependencies.version>Hoxton.SR3</spring-cloud-dependencies.version>
         <spring-cloud-alibaba-dependencies.version>2.1.1.RELEASE</spring-cloud-alibaba-dependencies.version>
     </properties>
 
@@ -80,16 +82,6 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!--工具类-->
         <dependency>
@@ -235,9 +227,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <encoding>${maven.compiler.encoding}</encoding>
+                    <compilerArgs>${maven.compiler.compilerArgs}</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
